# kedro-databricks

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  coverage.junit.xml  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml
.github/actions/check_version/: action.yml
.github/workflows/: docs.yml  integration_tests.yml  post_comment.yml  publish.yml  reusable_integration_tests.yml  test.yml  unit_tests.yml
changelog/: index.html
docs/: .nav.yml  changelog.md  command_reference.md  contributing.md  examples.md  getting_started.md  index.md  plugin.md
docs/reference/: command_reference.md
docs/stylesheets/: extra.css
examples/broken_custom_task/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/individual_task/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/individual_task_with_parameters/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/individual_workflows/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/merge_some_configs/: README.md  databricks.yml  result.yml
examples/regex_overrides/: README.md  databricks.yml  resources.yml  result.yml
examples/task_level_webhook_notifications/: README.md  databricks.yml  index.html  result.yml
examples/task_regex_overrides/: README.md  databricks.yml  resources.yml  result.yml
examples/using_default_overrides/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/webhook_notifications/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/with_all_jobs_api_2.2_fields/: README.md  databricks.yml  index.html  resources.yml  result.yml
examples/with_custom_libraries/: README.md  databricks.yml  index.html  result.yml
examples/with_health_rules/: README.md  databricks.yml  index.html  result.yml
examples/with_job_parameters/: README.md  databricks.yml  index.html  result.yml
getting_started/: index.html
reference/command_reference/: index.html
reference/kedro_databricks/cli/bundle/: index.html
reference/kedro_databricks/cli/bundle/generate_resources/: index.html
reference/kedro_databricks/cli/bundle/override_resources/: index.html
reference/kedro_databricks/cli/bundle/utils/: index.html
reference/kedro_databricks/cli/deploy/: index.html
reference/kedro_databricks/cli/deploy/get_deployed_resources/: index.html
reference/kedro_databricks/cli/destroy/: index.html
reference/kedro_databricks/cli/init/: index.html
reference/kedro_databricks/cli/init/create_target_configs/: index.html
reference/kedro_databricks/cli/run/: index.html
reference/kedro_databricks/constants/: index.html
reference/kedro_databricks/logger/: index.html
reference/kedro_databricks/plugin/: index.html
reference/kedro_databricks/utils/: index.html
scripts/: CHANGELOG.md.j2  dev_flow.py  gen_changelog.py  gen_example_pages.py  gen_ref_pages.py  mkdev.py  mkdev.sh  run_lint.sh  validate_codecov.sh
src/kedro_databricks/: __init__.py  bundle.py  config.py  constants.py  deploy.py  init.py  logger.py  plugin.py  resource_resolver.py  utils.py
src/kedro_databricks/cli/: __init__.py
src/kedro_databricks/cli/bundle/: __init__.py  generate_resources.py  override_resources.py  resource_generator_resolver.py  utils.py
src/kedro_databricks/cli/bundle/resource_generator/: __init__.py  abstract_resource_generator.py  node_resource_generator.py  pipeline_resource_generator.py
src/kedro_databricks/cli/deploy/: __init__.py  get_deployed_resources.py
src/kedro_databricks/cli/destroy/: __init__.py
src/kedro_databricks/cli/init/: __init__.py  create_target_configs.py  inject_local_hook.py
src/kedro_databricks/cli/run/: __init__.py
src/kedro_databricks/commands/: _options.py  bundle.py  deploy.py  destroy.py  init.py  run.py  version.py
src/kedro_databricks/core/: __init__.py  constants.py  databricks_cli.py  logger.py  utils.py
src/kedro_databricks/resource_generator/: __init__.py  abstract_resource_generator.py  exceptions.py  node_resource_generator.py  pipeline_resource_generator.py
src/kedro_databricks/resource_overrider/: __init__.py  abstract_resource_overrider.py  default_resource_overrider.py  jobs_resource_overrider.py
src/kedro_databricks/templates/: databricks.yml.tmpl  databricks_run.py  databricks_template_schema.json  kedro_databricks_config.yml.tmpl
src/kedro_databricks/utilities/: common.py  databricks_cli.py  plugin.py  resolver_generics.py
src/kedro_databricks/utilities/resource_generator/: __init__.py  abstract_resource_generator.py  exceptions.py  node_resource_generator.py  pipeline_resource_generator.py
src/kedro_databricks/utilities/resource_overrider/: __init__.py  abstract_resource_overrider.py  default_resource_overrider.py  jobs_resource_overrider.py
src/kedro_databricks/utils/: bundle_helpers.py  common.py  create_target_configs.py  has_databricks.py  override_resources.py  remove_nulls.py
tests/: conftest.py  test_deploy.py  test_override.py  test_plugin.py  test_units.py  utils.py
tests/integration/: conftest.py  test_bundle.py  test_databricks_iris.py  test_deploy.py  test_destroy.py  test_init.py  test_plugin.py  test_run.py
tests/unit/: test_bundle.py  test_config.py  test_deploy.py  test_examples.py  test_init.py  test_regex_overrides.py  test_resource_resolver.py  test_utilities_common.py  test_utilities_plugin.py  test_utilities_resolver_generics.py  test_utilities_resource_generators.py  test_utilities_resource_overriders_default_overrider copy.py  test_utilities_resource_overriders_default_overrider.py  test_utilities_resource_overriders_jobs_overrider.py  test_utils.py  test_version.py
