[project]
name = "kedro-databricks"
version = "0.6.1"
description = "A plugin to run Kedro pipelines on Databricks."
authors = [{ name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }]
dependencies = [
    "kedro>=0.19.8",
    "mergedeep>=1.3.4",
    "tomlkit>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/jenspederm/kedro-databricks"
Issues = "https://github.com/jenspederm/kedro-databricks/issues"

[project.entry-points."kedro.project_commands"]
databricks = "kedro_databricks.plugin:commands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "isort",
    "ipython",
    "notebook",
    "pre-commit",
    "commitizen",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kedro_databricks"]

[tool.pytest.ini_options]
addopts = """
    --log-format="%(asctime)s %(levelname)s %(message)s"
    --log-date-format="%Y-%m-%d %H:%M:%S"
    --cov-report=xml:coverage.xml
    --cov-report=term-missing
    --cov=kedro_databricks
    --no-cov-on-fail
    --cov-fail-under=70
    --ignore-glob="develop-eggs/*"
    -ra
    -vv"""


[tool.black]
exclude = ".*template.py"

[tool.coverage.report]
fail_under = 100
show_missing = true
omit = ["tests/*"]
exclude_also = ["raise NotImplementedError"]

[tool.ruff]
line-length = 88
show-fixes = true
lint.select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # Pylint
    "T201", # Print Statement
]
lint.ignore = ["E501", "PLR0913"] # Black takes care of line-too-long

[tool.ruff.lint.per-file-ignores]
"{tests,features}/*" = ["T201", "PLR2004", "PLR0915", "PLW1510"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
